actualizaciones con flex

--- a/Perfil-de-usuario-16-abril/index.html
+++ b/Perfil-de-usuario-16-abril/index.html
@@ -37,9 +37,9 @@
             </tr>
             <tr>
                 <td><p>Comida mexicana</p></td>
-                <td><p>Love Techno</p></td>
+                <td><p>Music Techno</p></td>
                 <td><p>Animal lover</p></td>
-                <td><p>Gamer</p></td>
+                <td><p>Yoga</p></td>
                 <td><p>Naturaleza</p></td>
             </tr>
         </table>
@@ -61,16 +61,16 @@
             <img src="https://picsum.photos/2000/2000" alt="">
         </div>
         <div class="box-gallery">
-            <img src="https://picsum.photos/300/300" alt="">
+            <img src="https://picsum.photos/600/300" alt="">
         </div>
         <div class="box-gallery">
-            <img src="https://picsum.photos/300/300" alt="">
+            <img src="https://picsum.photos/1240/600" alt="">
         </div>
         <div class="box-gallery">
-            <img src="https://picsum.photos/300/300" alt="">
+            <img src="https://picsum.photos/900/900" alt="">
         </div>
         <div class="box-gallery">
-            <img src="https://picsum.photos/300/300" alt="">
+            <img src="https://picsum.photos/2000/4000" alt="">
         </div>
     </div>
 </body>
