--- a/Perfil-de-usuario-16-abril/index.html
+++ b/Perfil-de-usuario-16-abril/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil personal - Barbara</title>
-    <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c1588bce38.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div id="img-top">
@@ -23,11 +23,11 @@
         <h1>Barbara</h1>
         <p>Tengo 26 Años, soy de valencia, amante de la electronica y de los paisajes, amo y disfruto de la vida y de la naturaleza.</p>
         <ul>
-            <li><a href="#"><i class="fa-solid fa-peace"></i> #Paz</a></li>
-            <li><a href="#"><i class="fa-solid fa-tree"></i> #Naturaleza</a></li>
-            <li><a href="#"><i class="fa-solid fa-leaf"></i> #Vegetariana</a></li>
-            <li><a href="#"><i class="fa-solid fa-umbrella-beach"></i> #Viajes</a></li>
-            <li><a href="#"><i class="fa-solid fa-flag"></i> #España</a></li>
+            <li><a href="#"><i class="fa-solid fa-peace"></i><br> #Paz</a></li>
+            <li><a href="#"><i class="fa-solid fa-tree"></i><br> #Naturaleza</a></li>
+            <li><a href="#"><i class="fa-solid fa-leaf"></i><br> #Vegetariana</a></li>
+            <li><a href="#"><i class="fa-solid fa-umbrella-beach"></i><br> #Viajes</a></li>
+            <li><a href="#"><i class="fa-solid fa-flag"></i><br> #España</a></li>
         </ul>
         <table border="1">
             <tr>
@@ -49,10 +49,10 @@
             <img src="https://picsum.photos/300/300" alt="">
         </div>
         <div class="box-gallery">
-            <img src="https://picsum.photos/300/300" alt="">
+            <img src="https://picsum.photos/500/300" alt="">
         </div>
         <div class="box-gallery">
-            <img src="https://picsum.photos/300/300" alt="">
+            <img src="https://picsum.photos/700/700" alt="">
         </div>
         <div class="box-gallery">
             <img src="https://picsum.photos/300/500" alt="">
